<resources>
    <string name="app_name">Valu</string>
    <string name="text_welcome">Bienvenid@s</string>
    <string name="text_name_principal">VALU \nSHOOPING</string>
    <string name="tb_principal">VALU SHOOPING</string>
    <string name="text_test">Aun configurado</string>
    <string name="text_title_dat_user_profile"><u>Datos Personales</u></string>
    <string name="txt_home">Inicio</string>
    <string name="txt_menu_principal">Principal</string>
    <string name="txt_other">Categorias</string>
    <string name="txt_config">Config</string>

    <!-- TODO: text error-->
    <string name="error_camera">Necesitas este permiso para agregar imagen</string>
    <string name="whatsapp_not_found">No tienes WhatsApp</string>
    <string name="error_login">Credenciales invalidas</string>

    <!-- TODO: text success-->
    <string name="text_success_profile">Datos guardados correctamente</string>

    <!-- TODO: text button-->
    <string name="txt_save">Guardar</string>


    <!-- TODO: text Message-->

    <string name="text_info_user">Si usted no se encuentra loageado, sus datos personales solo de guardaran de forma local</string>
    <string name="text_info_product">Consulte con el vendedor para mas detalle.</string>


    <string name="ui_script_multi">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </string>

    <!-- TODO: text View-->
    <string name="text_name">Nombres</string>
    <string name="text_phone">Telefono</string>
    <string name="text_address">Dirección</string>
    <string name="text_title">Titulo</string>
    <string name="text_last_name">Apellidos</string>
    <string name="text_document">Numero de documento</string>
    <string name="text_email">Correo electronico</string>

    <string name="txt_profile">Perfil</string>
    <string name="txt_menu_profile">Cambio de perfil</string>
    <string name="txt_menu_client">Se parte de nosotros</string>
    <string name="txt_menu_about">Sobre nosotros</string>
    <string name="txt_menu_map">Puntos de entrega</string>
    <string name="txt_menu_other">T &amp; C</string>
    <string name="txt_menu_facebook">Facebook</string>
    <string name="txt_menu_youtube">Youtube</string>
    <string name="txt_menu_tiktok">Tiktok</string>
    <string name="txt_menu_instagram">Instagram</string>
    <string name="txt_menu_support">Soporte tecnico</string>
    <string name="txt_menu_logout"><u>Cerrar sesión</u></string>
    <string name="text_available">Disponible</string>
    <string name="text_exhausted">Agotado</string>
    <string name="text_principal">Principal</string>
    <string name="text_yes">SI</string>
    <string name="text_not">NO</string>
    <string name="text_description_product">Descripcion del producto</string>
    <string name="hint_description_product">Agrega descripcion minuno de caracteres 20</string>
    <string name="text_type_product">Tipo de producto</string>
    <string name="text_other">Otros</string>
    <string name="text_accessories">Accesorios</string>

    <string name="text_garments">Prendas</string>
    <string name="text_skirt">Falda</string>
    <string name="text_footwear">Calzado</string>
    <string name="text_pants">Pantalon</string>
    <string name="text_pole">Polo</string>
    <string name="text_imitation_jewelry">Visuteria</string>
    <string name="text_unisex">Unisex</string>
    <string name="text_female">Mujer</string>
    <string name="text_male">Varon</string>
    <string name="text_gender">Genero</string>
    <string name="text_product_choose">Elige ahora un producto</string>
    <string name="text_product_empty">Aun no hay \nproductos agregados</string>
    <string name="text_product_image_empty">Aun no hay \nimagenes agregadas</string>
    <string name="text_title_price_unit">C/U:</string>
    <string name="text_title_price_doc">DOC/:</string>

    <!-- TODO: text item menu-->
    <string name="text_number_support">935815994</string>
    <string name="text_support">Hola tengo un problema en la app valu</string>
    <string name="text_not_config">Aun no esta configurado</string>
    <string name="text_title_delivery_points">Recomedaciones de puntos de entrega</string>
    <string name="text_message_delivery_points">- Estaciones del tren electrico de lima\n- Estaciones del metropolitano\n- Centros comerciales (Plaza norte, mega plaza,etc)</string>
    <string name="text_info_delivery_points">Los puntos de entrega se coordinan con el vendedor el producto que desea adquirir.</string>

    <!-- TODO: text modal-->

    <string name="text_success_data">Datos guardados</string>
    <string name="sub_text_success_data">Datos guardados correctamente, los vera reflejado la proxima ves que ingrese.</string>
    <string name="text_body_join">Me gustaria ser parte de ustedes y que mis productos esten en su aplicacion, me indica los pasos a seguir</string>
    <string name="text_title_join">Unete a nosotros</string>
    <string name="sub_text_title_join">Te contactaremos con un encargado que te ayudara a saber el proceso para que tus productos aparescan en nuestra aplicacion, asegurate de haber leido la seccion de SOBRE NOSOTROS para saber un poco mas de nosotros.</string>
    <string name="text_title_support">Soporte tecnico</string>
    <string name="sub_text_title_support">Te contactaremos con un asesor si tienes algun problema tecnico en el proceso de uso de nuestra aplicación</string>
    <string name="text_title_delete">Eliminar producto</string>
    <string name="sub_text_title_delete">Estas seguro que deseas eliminar el producto</string>

    <string name="text_title_delete_image">Eliminar imagen</string>
    <string name="sub_text_title_delete_image">Estas seguro que deseas eliminar la imagen del producto</string>



    <string name="text_about_use">* En esta app podras ver en la sección de principal los productos disponibles, para poder adquirilos.\n* Luego para poder ver mas detall del producto darle click al producto para poder ver el detalle, tambien podras ver ma imagen mas grande dandole click a la imagen del prodcuto
    \n* En la pantalla del detalle del producto podras ver toda la información completa del produto podra contactarte con el vendedor via redirección al whatsApp y tambien podras compartir el producto con alguna otra persona dandole click a la opcion de compartir y decidiras porquemedio hacerlo.
    \n* El ultimo paso lo de la coordinación para adquirir el producto lo realizaran internamente el comprador con el vendedor.
    </string>
    <string name="text_about_blocking">* Trate de no fallar en coordinaciones de las ventas, si tiene algun reporte por algunas parte sea vendedor o comprador seran bloqueado de esta aplicacion y no podra usarlo.
    \n* Aclarar que todos lo que anuncien sus productos sera validados internamente para la confiabilidad y evitar inconvenientes.
    </string>
    <string name="text_about_recommended">* Esta app recomienda que todo pago se realize cuando tenga el producto entregado.
    \n* Revisar el producto que cumpla con las caracteristicas de la descripción del producto.
        \n* Toda entrega se recomienda que sean en punto publicos y seguros y/o en el local fisico en caso lo tenga.
        \n* Si eres un anunciante se recomienda poner datos claro al momento de agregar producto y las imagenes sea cuadradas.
    </string>

    <string name="text_about_profile">* En la patanlla de perfil los datos que ingrese solo sera guardado localmente.
        * Para empezar darle clic al icono de lapiz para poder ingrsar los datos.
    \n* Las imagenes de perfil y banner traten que sean en la dimensiones similares a los ejemplos presentados.
        \n* Asegurese de colocar todos los datos correctamente para que el boton de guardado se active.
    </string>

</resources>