<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navClient"
            android:icon="@drawable/ic_client"
            android:title="@string/txt_menu_client"/>
        <item
            android:id="@+id/navMap"
            android:icon="@drawable/ic_map"
            android:title="@string/txt_menu_map" />

        <item
            android:id="@+id/navFacebook"
            android:icon="@drawable/ic_facebook"
            android:title="@string/txt_menu_facebook" />
        <item
            android:id="@+id/navInstagram"
            android:icon="@drawable/ic_instagram"
            android:title="@string/txt_menu_instagram" />
        <item
            android:id="@+id/navOther"
            android:icon="@drawable/ic_term"
            android:title="@string/txt_menu_other" />

        <item
            android:id="@+id/other_section"
            android:title="">
            <menu>
                <item
                    android:id="@+id/navLogout"
                    android:checked="true"
                    android:title="@string/txt_menu_logout" />
            </menu>
        </item>

    </group>
</menu>